# rss-follow

./: Cargo.toml
src/: fmt.rs  main.rs  subscribe.rs
