[package]
name = "rss-follow"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
rss = "1.9"
inventory = "0.1"
clap = "2.33"

[dependencies.tokio]
version = "0.2"
features = ["io-driver", "rt-core"]
default-features = false
